@@ -50,6 +50,18 @@ public class FunctorCompilerTest {
     }
 
     @Test
+    public void functorWrongReturn() {
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/functor/FunctorWrongReturnType")
+                .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
+                .collect(Collectors.toList());
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
+        String[] flags = args.toArray(new String[4]);
+        int k = ToolProvider.getSystemJavaCompiler()
+                .run(System.in, System.out, System.err, flags);
+        assertEquals(1, k);
+    }
+
+    @Test
     public void functorMonad(){
         List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/functor/FunctorMonad")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
